<resources>
    <string name="app_name">FYP</string>

    <!--tensorflow-->
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>

    <string name="image_search">Search by Image</string>
    <string name="image_text">Point the camera at your ingredient and press the button below:</string>
    <string name="image_capture">Capture</string>

    <!--search results activity-->
    <string name="search_error">Sorry! No food items in our database match that entry. Please try again - adjust your picture or check your spelling</string>

    <!--weight activity-->
    <string name="default_weight">100</string>
    <string name="weight_tv">Weight:</string>
    <string name="title_tv">Item:</string>
    <string name="nutrients_title">Nutritional Information:</string>
    <string name="title_name">Nutrient</string>
    <string name="title_value">Value</string>
    <string name="title_unit">Unit</string>
    <string name="confirm_weight_btn">Confirm Weight/Save Ingredient</string>


    <!--main cases-->
    <string name="case_energy">Energy</string>
    <string name="case_protein">Protein</string>
    <string name="case_fat">Total lipid (fat)</string>
    <string name="case_carbs">Carbohydrate, by difference</string>
    <string name="case_fiber">Fiber, total dietary</string>
    <string name="case_sugar">Sugars, total</string>
    <string name="case_sodium">Sodium, Na</string>
    <string name="case_saturated_fat">Fatty acids, total saturated</string>

    <!-- main nutrient names -->
    <string name="name_energy">Calories</string>
    <string name="name_protein">Protein</string>
    <string name="name_fat">Fat</string>
    <string name="name_carbs">Carbohydrates</string>
    <string name="name_fiber">Fiber</string>
    <string name="name_sugar">Sugar</string>
    <string name="name_sodium">Sodium</string>
    <string name="name_saturated_fat">Saturated Fat</string>

    <string name="test">100</string>

    <!--alternative cases - for potential future use-->
    <string name="case_water">Water</string>
    <string name="case_calcium">Calcium, Ca</string>
    <string name="case_iron">Iron, Fe</string>
    <string name="case_magnesium">Magnesium, Mg</string>
    <string name="case_phosphoros">Phosphorus, P</string>
    <string name="case_potassium">Potassium, K</string>
    <string name="case_zinc">Zinc, Zn</string>
    <string name="case_vit_c">Vitamin C, total ascorbic acid</string>
    <string name="case_vit_b1">Thiamin</string>
    <string name="case_vit_b2">Riboflavin</string>
    <string name="case_vit_b3">Niacin</string>
    <string name="case_vit_b6">Vitamin B-6</string>
    <string name="case_vit_b9">Folate, DFE</string>
    <string name="case_vit_b12">Vitamin B-12</string>
    <string name="case_vit_a">Vitamin A, RAE</string>
    <string name="case_vit_a_iu">Vitamin A, IU</string>
    <string name="case_vit_e">Vitamin E(alpha-tocopherol)</string>
    <string name="case_vit_d">Vitamin D(D2 + D3)</string>
    <string name="case_vit_d_iu">Vitamin D</string>
    <string name="case_vit_k">Vitamin K(phylloquinone)</string>
    <string name="case_monounsaturated_fat">Fatty acids, total monounsaturated</string>
    <string name="case_polyunsaturated_fat">Fatty acids, total polyunsaturated</string>
    <string name="case_trans_fat">Fatty acids, total trans</string>
    <string name="case_cholesterol">Cholesterol</string>
    <string name="case_caffeine">Caffeine</string>

    <string name="ndbno_apples">09003</string>

    <!--DailyViewActivity strings-->
    <string name="title_activity_daily_view">DailyViewActivity</string>
    <string name="daily_view_right_btn">Right button: use to change to next day</string>
    <string name="daily_view_left_btn">Left button: use to change to previous day</string>
    <string name="daily_view_no_meals">No meals stored for this day. Click the plus button to add a meal.</string>

    <!--MealTypeFragment strings-->
    <string name="meal_breakfast">Breakfast</string>
    <string name="meal_lunch">Lunch</string>
    <string name="meal_dinner">Dinner</string>
    <string name="meal_snacks">Snacks</string>
    <string name="meal_prompt">What type of meal would you like to add?</string>

    <!--MealBuilderActivity strings -->
    <string name="tv_add_ingredient">Use the field below to add ingredients to your meal:</string>
    <string name="ingredient_search_prompt">Search for an ingredient here</string>
    <string name="title_activity_meal_builder">MealBuilderActivity</string>
    <string name="name_sats">Sats</string>
    <string name="name_carb">Carbs</string>
    <string name="name_prot">Prot.</string>
    <string name="name_sod">Na</string>


    <!-- Unit suffixes -->
    <string name="unit_weight">g</string>
    <string name="unit_cals">kcal</string>
    <string name="unit_sodium">mg</string>

    <!--MainActivity strings-->
    <string name="search_button">Search</string>
</resources>
