<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="6dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meal_title"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_margin="4dp">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp">
            <TableRow>
                <TextView
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/name_energy"/>

                <TextView
                    android:id="@+id/meal_cal_total"
                    android:layout_marginStart="4dp"
                    android:text="@string/test"
                    android:gravity="end"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/name_fat"/>

                <TextView
                    android:id="@+id/meal_fat_total"
                    android:layout_marginStart="4dp"
                    android:text="@string/test"
                    android:gravity="end"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/name_saturated_fat"/>

                <TextView
                    android:id="@+id/meal_sat_total"
                    android:layout_marginStart="4dp"
                    android:text="@string/test"
                    android:gravity="end"/>
            </TableRow>
        </TableLayout>
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:stretchColumns="1"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            >
            <TableRow>
                <TextView
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/name_protein"/>

                <TextView
                    android:layout_marginStart="4dp"
                    android:text="@string/test"
                    android:id="@+id/meal_protein_total"
                    android:gravity="end"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/name_carbs"/>
                <TextView
                    android:id="@+id/meal_carb_total"
                    android:layout_marginStart="4dp"
                    android:text="@string/test"
                    android:gravity="end"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/name_sugar"/>

                <TextView

                    android:id="@+id/meal_sugar_total"
                    android:layout_marginStart="4dp"
                    android:text="@string/test"
                    android:gravity="end"/>
            </TableRow>
        </TableLayout>

        <!--<android.support.constraint.ConstraintLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/meal_layoutL"-->
            <!--android:layout_weight="1">-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/meal_cal_title"-->
                <!--android:textStyle="bold"-->
                <!--android:textSize="12sp"-->
                <!--app:layout_constraintStart_toStartOf="@id/meal_layoutL"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/name_energy"/>-->

                <!--<TextView-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/meal_cal_total"-->
                    <!--app:layout_constraintStart_toEndOf="@id/meal_cal_title"-->
                    <!--android:layout_marginStart="4dp"-->
                    <!--android:text="@string/test"/>-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/meal_fat_title"-->
                <!--android:textStyle="bold"-->
                <!--android:textSize="12sp"-->
                <!--app:layout_constraintStart_toStartOf="@id/meal_cal_title"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/meal_cal_title"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/name_fat"/>-->

                <!--<TextView-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/meal_fat_total"-->
                    <!--app:layout_constraintStart_toEndOf="@id/meal_fat_title"-->
                    <!--android:layout_marginStart="4dp"-->
                    <!--android:text="@string/test"/>-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/meal_sat_title"-->
                <!--android:textStyle="bold"-->
                <!--android:textSize="12sp"-->
                <!--app:layout_constraintStart_toStartOf="@id/meal_fat_title"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/meal_fat_title"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/name_saturated_fat"/>-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/meal_sat_total"-->
                <!--app:layout_constraintStart_toEndOf="@id/meal_sat_title"-->
                <!--android:layout_marginStart="4dp"-->
                <!--android:text="@string/test"/>-->

        <!--</android.support.constraint.ConstraintLayout>-->
        <!--<android.support.constraint.ConstraintLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/meal_layoutR"-->
            <!--android:layout_weight="1">-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/meal_carbs_title"-->
                <!--android:textSize="12sp"-->
                <!--android:textStyle="bold"-->
                <!--app:layout_constraintStart_toStartOf="@id/meal_layoutR"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/name_carbs"/>-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginStart="4dp"-->
                <!--android:text="@string/test"/>-->

        <!--</android.support.constraint.ConstraintLayout>-->
    </LinearLayout>
</LinearLayout>